--- a/todo_app/pubspec.yaml
+++ b/todo_app/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   path_provider: ^2.1.5
+  google_fonts: ^6.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
